# academic_paper_pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
monitoring/: prometheus.yml
monitoring/grafana/: academic_paper_pipeline_dashboard.json
prometheus/: prometheus.yml
src/academic_paper_pipeline/: config.py
src/academic_paper_pipeline/agents/: research_agents.py
src/academic_paper_pipeline/collectors/: arxiv_client.py  openalex_client.py
src/academic_paper_pipeline/extractors/: langchain_extractor.py
src/academic_paper_pipeline/monitoring/: metrics_server.py
src/academic_paper_pipeline/pipelines/: run_agent_pipeline.py  run_collect_arxiv.py  run_collect_openalex.py  run_extract_papers.py  run_langgraph_pipeline.py
src/academic_paper_pipeline/reports/: generate_report.py
src/academic_paper_pipeline/storage/: schema.sql  sqlite_store.py
